--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
   <!-- ================= HEADER ================= -->
   <header class="site-header" id="siteHeader">
     <div class="header-inner">
-      <div class="brand">SANTHOSH KUMAR CHANDRASHEKAR</div>
+      <div class="brand">SANTHOSH KUMAR C</div>
 
       <!-- Desktop links -->
       <nav class="nav-links" aria-label="Primary">
