--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <title>Santhosh Kumar Chandrashekar | Portfolio Architect</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta name="description"
         content="Portfolio Architect specializing in Enterprise Architecture, Cloud (Azure & AWS), DevOps, and Solution Architecture. Leading cloud platform strategy, migration, and modernization." />
   <meta name="theme-color" content="#0ea5e9" />
 
-  <!-- Google Fonts (preconnect + stylesheet) -->
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet" />
@@ -34,9 +34,9 @@
       --header-text:  #ffffff;
 
       /* Mobile drawer colors */
-      --drawer-bg: rgba(15, 23, 42, 0.92);
-      --drawer-border: rgba(255,255,255,.1);
-      --scrim: rgba(0,0,0,.35);
+      --drawer-bg: rgba(15, 23, 42, 0.96);
+      --drawer-border: rgba(255,255,255,.08);
+      --scrim: rgba(0,0,0,.42);
     }
 
     /* =========================================================
@@ -55,8 +55,8 @@
         --header-end:   #7c3aed;
         --header-text:  #ffffff;
 
-        --drawer-bg: rgba(2,6,23,0.96);
-        --drawer-border: rgba(255,255,255,.15);
+        --drawer-bg: rgba(2, 6, 23, 0.96);
+        --drawer-border: rgba(255,255,255,.12);
         --scrim: rgba(0,0,0,.5);
       }
     }
@@ -67,12 +67,12 @@
     html.theme-light{
       --page-bg: #f5f6f8; --bg:#fff; --text:#111827; --subtext:#4b5563; --border:#e5e7eb; --shadow:0 1px 0 var(--border);
       --header-start:#0ea5e9; --header-end:#6366f1; --header-text:#fff;
-      --drawer-bg: rgba(15, 23, 42, 0.92); --drawer-border: rgba(255,255,255,.1); --scrim: rgba(0,0,0,.35);
+      --drawer-bg: rgba(15, 23, 42, 0.96); --drawer-border: rgba(255,255,255,.08); --scrim: rgba(0,0,0,.42);
     }
     html.theme-dark{
       --page-bg:#0b1223; --bg:#0f172a; --text:#e5e7eb; --subtext:#cbd5e1; --border:#1f2937; --shadow:0 1px 0 var(--border);
       --header-start:#0ea5e9; --header-end:#7c3aed; --header-text:#fff;
-      --drawer-bg: rgba(2,6,23,0.96); --drawer-border: rgba(255,255,255,.15); --scrim: rgba(0,0,0,.5);
+      --drawer-bg: rgba(2, 6, 23, 0.96); --drawer-border: rgba(255,255,255,.12); --scrim: rgba(0,0,0,.5);
     }
 
     /* =========================================================
@@ -90,6 +90,7 @@
       color: var(--text);
       line-height: 1.7;
       transition: background-color .3s ease, color .3s ease;
+      min-height: 100svh;
     }
 
     a{ color: var(--accent); text-decoration: none; }
@@ -141,10 +142,7 @@
     }
 
     /* Desktop nav links */
-    .nav-links{
-      display: flex;
-      gap: 18px;
-    }
+    .nav-links{ display: flex; gap: 18px; }
     .nav-links a{
       color: var(--header-text);
       font-size: 15px;
@@ -167,18 +165,11 @@
       line-height: 1;
     }
 
-    .header-actions{
-      display: flex;
-      gap: 8px;
-      justify-content: flex-end;
-      align-items: center;
-    }
+    .header-actions{ display: flex; gap: 8px; justify-content: flex-end; align-items: center; }
 
     /* --- Mobile layout --- */
     @media (max-width: 768px){
-      .header-inner{
-        grid-template-columns: 1fr auto auto; /* brand | theme | menu */
-      }
+      .header-inner{ grid-template-columns: 1fr auto auto; /* brand | theme | menu */ }
       .nav-links{ display: none; } /* hide desktop links */
       .menu-btn{ display: inline-flex; }
       .brand.home-link{ font-size: 18px; }
@@ -187,7 +178,7 @@
     /* --- Mobile Drawer --- */
     .mobile-menu{
       position: fixed; inset: 0; z-index: 50;
-      display: grid; grid-template-columns: 1fr min(78vw, 320px);
+      display: grid; grid-template-columns: 1fr min(84vw, 340px);
       background: var(--scrim);
       opacity: 0; pointer-events: none; transition: opacity .2s ease;
     }
@@ -195,34 +186,44 @@
     .mobile-menu-scrim{ width: 100%; height: 100%; }
 
     .mobile-panel{
-      height: 100%; background: var(--drawer-bg);
+      height: 100%;
+      background: var(--drawer-bg);
       border-left: 1px solid var(--drawer-border);
-      padding: 16px;
+      /* Safe-area padding for notches and rounded corners */
+      padding: max(12px, env(safe-area-inset-top)) max(16px, env(safe-area-inset-right)) max(16px, env(safe-area-inset-bottom)) max(16px, env(safe-area-inset-left));
       transform: translateX(100%);
       transition: transform .25s ease;
-      display: grid; grid-template-rows: auto 1fr auto; /* top | nav | cta */
-      gap: 12px;
+      display: grid;
+      grid-template-rows: 48px 1fr auto; /* top row | nav | cta */
+      row-gap: 12px;
     }
     .mobile-menu[data-open="true"] .mobile-panel{ transform: translateX(0%); }
 
     .mobile-top{
-      display: flex; justify-content: space-between; align-items: center;
+      display: grid;
+      grid-template-columns: 1fr 24px; /* title | close */
+      align-items: center;
+      column-gap: 8px;
     }
-    .mobile-title{ font-weight: 700; color: #fff; letter-spacing: .02em; }
+    .mobile-title{
+      font-weight: 700; color: #fff; letter-spacing: .02em;
+      font-size: 18px;
+    }
     .mobile-close{
       appearance: none; background: transparent; border: 0; color: #fff;
-      font-size: 22px; cursor: pointer;
+      font-size: 24px; line-height: 1; cursor: pointer; justify-self: end;
     }
     .mobile-nav{
-      display: grid; align-content: start; gap: 8px; margin-top: 8px;
+      display: grid; align-content: start; row-gap: 20px; margin: 4px 0 0;
     }
     .mobile-nav a{
-      color: #fff; text-decoration: none; font-size: 16px; padding: 10px 8px; border-radius: 8px;
+      color: #fff; text-decoration: none; font-size: 18px; padding: 6px 2px; border-radius: 8px;
     }
-    .mobile-nav a:active{ background: rgba(255,255,255,.08); }
+    .mobile-nav a:active{ background: rgba(255,255,255,.06); }
+    .mobile-cta { padding-top: 12px; border-top: 1px solid var(--drawer-border); }
 
     /* =========================================================
-       6) CONTACT CTA (LinkedIn)
+       6) CONTACT CTA (LinkedIn) — accurate brand mark
        ========================================================= */
     .btn-linkedin {
       display: inline-flex;
@@ -233,22 +234,26 @@
       font-weight: 600;
       color: #ffffff;                 /* text/icon color */
       background: #0A66C2;            /* LinkedIn brand blue */
-      border: 1px solid rgba(255,255,255,.2);
+      border: 1px solid rgba(255,255,255,.18);
       text-decoration: none;
       transition: transform .08s ease, filter .15s ease, box-shadow .15s ease;
       box-shadow: 0 2px 10px rgba(0,0,0,.08);
+      line-height: 1;
     }
     .btn-linkedin:hover { filter: brightness(1.05); }
     .btn-linkedin:active { transform: translateY(1px); }
-    .btn-linkedin .li-icon { width: 20px; height: 20px; }
+    .btn-linkedin .li-icon { width: 20px; height: 20px; flex: 0 0 20px; display: block; }
+
+    /* The accurate 'in' logo: blue rounded square + white glyph */
+    .li-square { fill: #0A66C2; }
+    .li-glyph  { fill: #ffffff; }
 
     html.theme-dark .btn-linkedin { box-shadow: 0 2px 10px rgba(0,0,0,.35); }
 
     .contact-cta { margin: 16px 0 8px; }
     .contact-email { color: var(--subtext); }
 
-    /* Drawer CTA area */
-    .mobile-cta { padding-top: 8px; border-top: 1px solid var(--drawer-border); }
+    /* Drawer CTA button fills width, centered content */
     .mobile-cta .btn-linkedin { width: 100%; justify-content: center; }
 
     /* =========================================================
@@ -295,7 +300,7 @@
   <header class="site-header" id="siteHeader">
     <div class="header-inner">
       <!-- Brand links to top -->
-      <a href="#top" class="brand home-link" id="homeLink" aria-label="Go to top">Santhosh Kumar C</a>
+      <a class="brand home-link" id="homeLink" href="#top" aria-label="Go to top">Santhosh Kumar C</a>
 
       <!-- Desktop links -->
       <nav class="nav-links" aria-label="Primary">
@@ -314,7 +319,7 @@
     </div>
   </header>
 
-  <!-- ================= MOBILE MENU DRAWER ================= -->
+  <!-- ================= MOBILE MENU DRAWER (right) ================= -->
   <div class="mobile-menu" id="mobileMenu" hidden>
     <div class="mobile-menu-scrim" data-close="true" aria-hidden="true"></div>
     <aside class="mobile-panel" role="dialog" aria-modal="true" aria-labelledby="mobileMenuTitle">
@@ -335,9 +340,11 @@
       <div class="mobile-cta">
         <a class="btn-linkedin" href="https://linkedin.com/in/sankum-chandra" target="_blank" rel="noopener noreferrer"
            aria-label="Connect with me on LinkedIn">
+          <!-- Accurate LinkedIn icon: rounded square + 'in' glyph -->
           <svg class="li-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-            <path fill="currentColor"
-              d="M20.45 20.45h-3.56v-5.57c0-1.33-.02-3.05-1.86-3.05-1.86 0-2.14 1.45-2.14 2.95v5.67H9.33V9.75h3.41v1.47h.05c.48-.9 1.66-1.86 3.42-1.86 3.66 0 4.34 2.41 4.34 5.55v5.54ZM5.34 8.28a2.07 2.07 0 1 1 0-4.13 2.07 2.07 0 0 1 0 4.13Zm-1.78 12.17h3.56V9.75H3.56v10.7ZM22.23 0H1.77C.8 0 0 .8 0 1.77v20.46C0 23.2.8 24 1.77 24h20.46c.97 0 1.77-.8 1.77-1.77V1.77C24 .8 23.2 0 22.23 0Z"/>
+            <rect class="li-square" x="2" y="2" width="20" height="20" rx="4" ry="4"/>
+            <path class="li-glyph"
+              d="M7.55 17.5H5.2V9.93h2.35V17.5ZM6.38 8.9c-.75 0-1.36-.61-1.36-1.36s.61-1.36 1.36-1.36 1.36.61 1.36 1.36S7.14 8.9 6.38 8.9Zm12.42 8.6h-2.34v-3.94c0-.94-.02-2.15-1.31-2.15-1.31 0-1.51 1.02-1.51 2.08v4.01h-2.34V9.93h2.24v1.04h.03c.31-.58 1.08-1.2 2.21-1.2 2.36 0 2.75 1.55 2.75 3.56v4.17Z"/>
           </svg>
           <span>Connect with me</span>
         </a>
@@ -348,7 +355,7 @@
   <!-- ================= MAIN ================= -->
   <main id="main" class="container">
     <section class="hero" aria-labelledby="name">
-      <img src="assets/images/profile.webp" alt="Santhosh Kumar Chandrashekar" class="profile-pic" width="140" height="140" loading="lazy" decoding="async" />
+      <img src="assets/images/profile.webp" alt="Profile photo" class="profile-pic" width="140" height="140" loading="lazy" decoding="async" />
       <div>
         <h1 id="name">Santhosh Kumar Chandrashekar</h1>
         <p class="subtitle">
@@ -406,8 +413,9 @@
         <a class="btn-linkedin" href="https://linkedin.com/in/sankum-chandra" target="_blank" rel="noopener noreferrer"
            aria-label="Connect with me on LinkedIn">
           <svg class="li-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-            <path fill="currentColor"
-              d="M20.45 20.45h-3.56v-5.57c0-1.33-.02-3.05-1.86-3.05-1.86 0-2.14 1.45-2.14 2.95v5.67H9.33V9.75h3.41v1.47h.05c.48-.9 1.66-1.86 3.42-1.86 3.66 0 4.34 2.41 4.34 5.55v5.54ZM5.34 8.28a2.07 2.07 0 1 1 0-4.13 2.07 2.07 0 0 1 0 4.13Zm-1.78 12.17h3.56V9.75H3.56v10.7ZM22.23 0H1.77C.8 0 0 .8 0 1.77v20.46C0 23.2.8 24 1.77 24h20.46c.97 0 1.77-.8 1.77-1.77V1.77C24 .8 23.2 0 22.23 0Z"/>
+            <rect class="li-square" x="2" y="2" width="20" height="20" rx="4" ry="4"/>
+            <path class="li-glyph"
+              d="M7.55 17.5H5.2V9.93h2.35V17.5ZM6.38 8.9c-.75 0-1.36-.61-1.36-1.36s.61-1.36 1.36-1.36 1.36.61 1.36 1.36S7.14 8.9 6.38 8.9Zm12.42 8.6h-2.34v-3.94c0-.94-.02-2.15-1.31-2.15-1.31 0-1.51 1.02-1.51 2.08v4.01h-2.34V9.93h2.24v1.04h.03c.31-.58 1.08-1.2 2.21-1.2 2.36 0 2.75 1.55 2.75 3.56v4.17Z"/>
           </svg>
           <span>Connect with me</span>
         </a>
@@ -560,3 +568,4 @@
   </script>
 </body>
 </html>
+``
